# league-information

./: README.md  pyproject.toml
api/: champions.py
app/: league.py
notebooks/: api.ipynb  classes.ipynb  first_notebook.ipynb  new.ipynb
