[tool.poetry]
name = "league-information"
version = "0.1.0"
description = ""
authors = ["nicholas <nickptran@gmail.com>"]
readme = "README.md"
packages = [{include = "league_information"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.1"
cassiopeia = "^5.0.3"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
