[tool.poetry]
name = "league-information"
version = "0.1.0"
description = ""
authors = ["nicholas <nickptran@gmail.com>"]
readme = "README.md"
packages = [{include = "league_information"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.0.1"
cassiopeia = "^5.0.3"
python-dotenv = "^1.0.0"
riotwatcher = "^3.2.4"
seaborn = "^0.12.2"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "^2.12.0"
scikit-learn = "^1.2.2"
plotnine = "^0.10.1"
plotly = "^5.14.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
